# aurochs

./: .gitignore  Cargo.toml  readme.md
src/: aurochs.rs  lib.rs  main.rs
