[package]
name = "aurochs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Write html as if you were doing it with JavaScript, but in Rust"
homepage = "https://github.com/ionutrogojan/aurochs"
repository = "https://github.com/ionutrogojan/aurochs"
keywords = ["html"]
categories = ["template-engine", "web-programming"]
readme = "readme.md"

[lib]
name = "aurochs"
path = "src/lib.rs"


[dependencies]
